fix(login required modal): fixed the text alignment

--- a/src/components/LoginRequiredModal/LoginRequiredModal.module.css
+++ b/src/components/LoginRequiredModal/LoginRequiredModal.module.css
@@ -61,6 +61,7 @@
 }
 
 .backButton {
+  text-align: center;
   cursor: pointer;
   color: white;
   background-color: red;
@@ -76,6 +77,7 @@
 }
 
 .loginButton {
+  text-align: center;
   cursor: pointer;
   color: white !important;
   text-decoration: none;
